--- a/requirements.txt
+++ b/requirements.txt
@@ -23,7 +23,8 @@ scikit_learn==1.3.0
 sentencepiece==0.1.99
 setuptools==67.8.0
 tensorflow==2.14.0
-torch==1.12.0+cu102
+#torch==1.12.0+cu102
+torch==1.12.0
 torch_xla==2.1.0
 tqdm==4.65.0
 transformers==4.28.1
